# ClassPresence

./: .env.example  .gitignore  .replit  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
attendance_app/: __init__.py  components.py  config.py  database.py  report_importer.py  reports.py  roster.py  security.py  services.py  utils.py
attendance_app/frontend/geo_capture/: index.html
attendance_app/frontend/location_picker/: index.html
scripts/: import_attendance_report.py
tests/: test_config.py  test_report_importer.py  test_roster.py  test_security.py  test_services.py  test_timetable_editor.py  test_utils.py
